--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -235,7 +235,7 @@
 /* Mobile L*/
 @media screen and (max-width: 425px) {
   .mainContainer {
-    height: 93vh;
+    height: 100vh;
     flex-direction: column;
     align-items: center;
   }
